# matrix-creator-hal

./: .drone.yml  CMakeLists.txt  ChangeLog  README.md
cpp/driver/: CMakeLists.txt  bus_direct.cpp  matrixio_bus.h  microphone_array.cpp  microphone_array.h  microphone_array_location.h  uart_control.cpp
debian/: control
demos/: CMakeLists.txt  direction_of_arrival_demo_direct.cpp  mic_demo_direct.cpp  mic_demo_fir_direct.cpp  mic_energy_direct.cpp  micarray_pipes_direct.cpp  micarray_raw_recorder_direct.cpp  micarray_recorder_direct.cpp  uart_demo.cpp
